Move http-mitm Dockerfile into mitm folder

--- a/mitm/Dockerfile
+++ b/mitm/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile
+# mitm/Dockerfile
 # http-mitm
 # Author: Rushy Panchal
 # Date: December 22nd, 2017
@@ -7,8 +7,8 @@
 FROM mitmproxy/mitmproxy:latest
 MAINTAINER Rushy Panchal <rpanchal@princeton.edu>
 
-ARG SCRIPT_PATH="mitm/malicious.sh"
-ARG MITM_PATH="mitm/rewrite_payload.py"
+ARG SCRIPT_PATH="malicious.sh"
+ARG MITM_PATH="rewrite_payload.py"
 
 ENV MALICIOUS_SCRIPT "/opt/malicious.sh"
 
